--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Inventory App</title>
+  <link href="static/css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">Inventory App Loaded</div>
+  <script src="static/js/main.js"></script>
 </body>
 </html>
